<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="2"
    android:gravity="center">
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center">
            <Button
                android:text="@string/Factor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/factor_button" />
            <Button
                android:text="@string/oneVar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/one_variable_button"
                android:visibility="gone" />
            <Button
                android:text="@string/videoTutorial"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/factorTutorialButton" />
        </LinearLayout>
    </LinearLayout>
    <Button
        android:text="@string/Tutorial"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/generalTutorialButton" />
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center">
            <Button
                android:text="@string/Multiply"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/multiply_button" />
            <Button
                android:text="@string/twoVar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/two_variable_button"
                android:visibility="gone" />
            <Button
                android:text="@string/videoTutorial"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/multiplyTutorialButton" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>