<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:whatever="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_centerInParent="true"
    android:layout_gravity="center"
    android:background="#CFE2F3"
    android:baselineAligned="false"
    android:orientation="horizontal"
    android:padding="0dp"
    tools:layout_editor_absoluteX="0dp"
    tools:layout_editor_absoluteY="0dp">

    <com.freelance.jptalusan.algetiles.ExtendedViews.AlgeTilesRelativeLayout
        android:id="@+id/upperLeft"
        android:layout_width="0px"
        android:layout_height="0dp"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="0dp"
        android:layout_marginTop="0dp"
        android:background="@drawable/shape"
        whatever:layout_constraintBottom_toTopOf="@+id/middlehor"
        whatever:layout_constraintEnd_toStartOf="@+id/middlevert"
        whatever:layout_constraintStart_toStartOf="parent"
        whatever:layout_constraintTop_toTopOf="parent" />

    <android.support.constraint.Guideline
        android:id="@+id/controls"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        whatever:layout_constraintGuide_percent="0.7" />

    <android.support.constraint.Guideline
        android:id="@+id/middlevert"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        whatever:layout_constraintGuide_percent="0.35" />

    <android.support.constraint.Guideline
        android:id="@+id/middlehor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        whatever:layout_constraintGuide_percent="0.5" />

    <com.freelance.jptalusan.algetiles.ExtendedViews.AlgeTilesRelativeLayout
        android:id="@+id/upperRight"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="0dp"
        android:layout_weight="92"
        android:background="@drawable/shape"
        whatever:layout_constraintBottom_toTopOf="@+id/middlehor"
        whatever:layout_constraintEnd_toStartOf="@+id/controls"
        whatever:layout_constraintStart_toStartOf="@+id/middlevert"
        whatever:layout_constraintTop_toTopOf="parent" />

    <GridLayout
        android:id="@+id/upperMiddle"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="0dp"
        android:layout_marginStart="0dp"
        android:layout_marginTop="0dp"
        android:layout_weight="16"
        android:background="@drawable/shape"
        android:columnCount="1"
        android:rotationX="180"
        android:rowCount="8"
        whatever:layout_constraintBottom_toTopOf="@+id/middlehor"
        whatever:layout_constraintEnd_toStartOf="@+id/upperRight"
        whatever:layout_constraintStart_toEndOf="@+id/upperLeft"
        whatever:layout_constraintTop_toTopOf="parent" />

    <com.freelance.jptalusan.algetiles.ExtendedViews.AlgeTilesRelativeLayout
        android:id="@+id/lowerLeft"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="16dp"
        android:layout_weight="92"
        android:background="@drawable/shape"
        whatever:layout_constraintBottom_toBottomOf="parent"
        whatever:layout_constraintEnd_toStartOf="@+id/middlevert"
        whatever:layout_constraintStart_toStartOf="parent"
        whatever:layout_constraintTop_toTopOf="@+id/middlehor" />

    <com.freelance.jptalusan.algetiles.ExtendedViews.AlgeTilesRelativeLayout
        android:id="@+id/lowerRight"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="0dp"
        android:layout_marginEnd="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_weight="92"
        android:background="@drawable/shape"
        whatever:layout_constraintBottom_toBottomOf="parent"
        whatever:layout_constraintEnd_toStartOf="@+id/controls"
        whatever:layout_constraintStart_toStartOf="@+id/middlevert"
        whatever:layout_constraintTop_toTopOf="@+id/middlehor" />

    <GridLayout
        android:id="@+id/lowerMiddle"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:layout_marginBottom="0dp"
        android:layout_marginEnd="0dp"
        android:layout_marginTop="16dp"
        android:layout_weight="16"
        android:background="@drawable/shape"
        android:columnCount="1"
        android:rowCount="8"
        whatever:layout_constraintBottom_toBottomOf="parent"
        whatever:layout_constraintEnd_toStartOf="@+id/lowerRight"
        whatever:layout_constraintHorizontal_bias="0.5"
        whatever:layout_constraintStart_toEndOf="@+id/lowerLeft"
        whatever:layout_constraintTop_toTopOf="@+id/middlehor" />

    <GridLayout
        android:id="@+id/middleLeft"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="0dp"
        android:layout_weight="92"
        android:background="@drawable/shape"
        android:columnCount="12"
        android:rotationY="180"
        android:rowCount="1"
        whatever:layout_constraintBottom_toTopOf="@+id/lowerLeft"
        whatever:layout_constraintEnd_toStartOf="@+id/middlevert"
        whatever:layout_constraintStart_toStartOf="parent"
        whatever:layout_constraintTop_toBottomOf="@+id/upperLeft" />

    <GridLayout
        android:id="@+id/middleRight"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="0dp"
        android:layout_marginEnd="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="0dp"
        android:layout_weight="92"
        android:background="@drawable/shape"
        android:columnCount="12"
        android:rowCount="1"
        whatever:layout_constraintBottom_toTopOf="@+id/lowerRight"
        whatever:layout_constraintEnd_toStartOf="@+id/controls"
        whatever:layout_constraintHorizontal_bias="1.0"
        whatever:layout_constraintStart_toStartOf="@+id/middlevert"
        whatever:layout_constraintTop_toBottomOf="@+id/upperRight" />

    <me.grantland.widget.AutofitTextView
        android:id="@+id/result"
        android:layout_width="0dp"
        android:layout_height="30dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_weight="5"
        android:background="@drawable/tvbackground"
        android:gravity="center"
        android:textColor="#000000"
        whatever:layout_constraintBottom_toTopOf="@+id/linearLayout2"
        whatever:layout_constraintEnd_toEndOf="parent"
        whatever:layout_constraintStart_toStartOf="@+id/controls"
        whatever:layout_constraintTop_toTopOf="parent"
        whatever:layout_constraintVertical_chainStyle="spread_inside"
        whatever:minTextSize="16sp" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="175dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_weight="5"
        android:gravity="fill"
        android:orientation="horizontal"
        android:padding="0dp"
        whatever:layout_constraintBottom_toTopOf="@+id/linearLayout3"
        whatever:layout_constraintEnd_toEndOf="parent"
        whatever:layout_constraintStart_toEndOf="@+id/middleRight"
        whatever:layout_constraintTop_toBottomOf="@+id/result">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="bottom"
            android:text="("
            android:textColor="#000000" />

        <EditText
            android:id="@+id/x_value_1"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="#ffffff"
            android:gravity="bottom|center"
            android:hint="......."
            android:imeOptions="actionDone"
            android:inputType="numberSigned"
            android:textColor="#000000" />

        <me.grantland.widget.AutofitTextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="bottom"
            android:text="x + "
            android:textColor="#000000"
            whatever:minTextSize="16sp" />

        <EditText
            android:id="@+id/one_value_1"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="#ffffff"
            android:gravity="bottom|center"
            android:hint="......."
            android:imeOptions="actionDone"
            android:inputType="numberSigned"
            android:textColor="#000000" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="bottom"
            android:text=") ("
            android:textColor="#000000" />

        <EditText
            android:id="@+id/x_value_2"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="#ffffff"
            android:gravity="bottom|center"
            android:hint="......."
            android:imeOptions="actionDone"
            android:inputType="numberSigned"
            android:textColor="#000000" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="bottom"
            android:text="x + "
            android:textColor="#000000" />

        <EditText
            android:id="@+id/one_value_2"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="#ffffff"
            android:gravity="bottom|center"
            android:hint="......."
            android:imeOptions="actionDone"
            android:inputType="numberSigned"
            android:textColor="#000000" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="bottom"
            android:text=")"
            android:textColor="#000000" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="175dp"
        android:layout_height="100dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_weight="10"
        android:gravity="fill"
        android:orientation="vertical"
        android:padding="0dp"
        android:weightSum="2"
        whatever:layout_constraintBottom_toTopOf="@+id/linearLayout7"
        whatever:layout_constraintEnd_toEndOf="parent"
        whatever:layout_constraintStart_toEndOf="@+id/middleRight"
        whatever:layout_constraintTop_toBottomOf="@+id/linearLayout2">

        <Button
            android:id="@+id/custom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Choose Q" />

        <Button
            android:id="@+id/new_question_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/newQ" />
        <!-- Tutorial button -->
        <Button
            android:id="@+id/tutorial"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="Tutorial"
            android:visibility="gone" />

        <ToggleButton
            android:id="@+id/drag"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textOff="drag"
            android:textOn="drag"
            android:textSize="12sp"
            android:visibility="gone" />

        <ToggleButton
            android:id="@+id/rotate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textOff="rotate"
            android:textOn="rotate"
            android:textSize="12sp"
            android:visibility="gone" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout7"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:orientation="horizontal"
        whatever:layout_constraintBottom_toTopOf="@+id/linearLayout8"
        whatever:layout_constraintEnd_toEndOf="parent"
        whatever:layout_constraintStart_toEndOf="@+id/middleRight"
        whatever:layout_constraintTop_toBottomOf="@+id/linearLayout3">

        <LinearLayout
            android:id="@+id/linearLayout4"
            android:layout_width="96dp"
            android:layout_height="60dp"
            android:layout_weight="10"
            android:gravity="fill"
            android:orientation="horizontal"
            android:padding="0dp"
            android:weightSum="2"
            tools:layout_editor_absoluteX="445dp"
            tools:layout_editor_absoluteY="222dp">

            <ToggleButton
                android:id="@+id/mute"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textOff="mute-"
                android:textOn="mute+"
                android:textSize="8sp" />

            <ToggleButton
                android:id="@+id/remove"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textOff="rem-"
                android:textOn="rem+"
                android:textSize="8sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout5"
            android:layout_width="95dp"
            android:layout_height="60dp"
            android:layout_weight="10"
            android:gravity="fill"
            android:orientation="horizontal"
            android:padding="0dp"
            android:weightSum="2"
            tools:layout_editor_absoluteX="541dp"
            tools:layout_editor_absoluteY="222dp">

            <Button
                android:id="@+id/check_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/check"
                android:textSize="12sp"/>

            <Button
                android:id="@+id/refresh_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/refresh"
                android:textSize="12sp" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout8"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_marginBottom="0dp"
        android:layout_marginEnd="0dp"
        android:layout_marginStart="0dp"
        android:layout_weight="30"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="5dp"
        whatever:layout_constraintBottom_toBottomOf="parent"
        whatever:layout_constraintEnd_toEndOf="parent"
        whatever:layout_constraintStart_toStartOf="@+id/controls"
        whatever:layout_constraintTop_toBottomOf="@+id/linearLayout7">

        <com.freelance.jptalusan.algetiles.ExtendedViews.AlgeTilesTextView
            android:id="@+id/tile_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="1"
            whatever:tileType="tile_1" />

        <android.support.v4.widget.Space
            android:id="@+id/space3"
            android:layout_width="0dp"
            android:layout_height="0dp" />

        <com.freelance.jptalusan.algetiles.ExtendedViews.AlgeTilesTextView
            android:id="@+id/x_tile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="x"
            whatever:tileType="x_tile" />

        <android.support.v4.widget.Space
            android:id="@+id/space4"
            android:layout_width="0dp"
            android:layout_height="0dp" />

        <com.freelance.jptalusan.algetiles.ExtendedViews.AlgeTilesTextView
            android:id="@+id/x2_tile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="x2"
            whatever:tileType="x2_tile" />
    </LinearLayout>
</android.support.constraint.ConstraintLayout>